main: divided by components, styling fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,20 @@
 #root {
   max-width: 1350px;
   margin: 0 auto;
-  /* padding: 2rem; */
   text-align: center;
 }
 
 .container {
   margin: 0 auto;
   padding: 2rem;
+  padding-top: 0;
   display: flex;
   justify-content: space-between;
-  /* border: 1px red solid; */
-  height: 100vh;
   width: 90%;
   gap: 10px;
 }
 
 .column {
-  /* border: 2px green solid; */
   width: 50%;
   overflow-y: scroll;
   scrollbar-width: none; /* Firefox */
@@ -36,7 +33,25 @@
   position: sticky;
   display: flex;
   flex-wrap: wrap;
-  /* bottom: 0%; */
+  width: 40%;
+  padding-bottom: 2em;
+  height: 85vh;
+  top: 6em;
+}
+
+.colum-static-introduction {
+  width: 90%;
+}
+
+.colum-static-introduction h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 3rem;
+}
+
+.colum-static-introduction h3 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .column-static-top,
@@ -49,33 +64,15 @@
   align-items: flex-end;
 }
 
-.social-link-menu {
-  list-style: none;
-  display: flex;
-  gap: 1em;
-  justify-content: space-around;
-  padding: 0;
-}
-
-.social-menu-link-icon {
-  width: 2em;
-  color: white;
-  filter: invert(1);
-  opacity: 0.5;
-}
-
 .column-dynamic {
+  width: 55%;
   overflow: auto;
 }
 
-.column-dynamic-content {
-  /* height: 2000px; */
-  /* border: 1px solid violet; */
-}
-
 .content-about {
-  width: calc(100% - 4em);
+  width: calc(100% - 6em);
   margin: 0 auto;
+  padding-top: 6em;
 }
 
 .content-experience,
@@ -83,77 +80,17 @@
   padding-top: 5em;
 }
 
-.content-item {
-  display: flex;
-  /* margin-bottom: 1em; */
-  padding: 1em 2em;
+.full-resume {
+  width: calc(100% - 6em);
+  margin: auto;
+  padding-top: 1em;
 }
 
-.content-item:hover {
-  border: 0px transparent solid;
-  border-radius: 0.5em;
-  background-color: #16213b;
-  box-sizing: border-box;
-  /* padding: 20px; */
-  /* filter: drop-shadow(0 0 0.75rem rgb(54, 221, 224)); */
-  box-shadow: 2em rgb(255, 255, 255);
+a:visited {
+  color: white;
 }
 
-.content-item h4 {
-  position: relative;
-  display: inline-block;
-  margin: 0;
-}
-
-.content-item:hover h4 {
-  color: #5eead4;
-}
-
-.content-item h4::after {
-  position: absolute;
-  background-image: url("/8666713_arrow_up_right_icon.png");
-  background-size: 1em 1em;
-  background-repeat: no-repeat;
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  content: "";
-  filter: invert(1);
-  right: -1.2em;
-  top: 0.25em;
-  -webkit-transition: all 250ms;
-  transition: all 250ms;
-  
-}
-
-.content-item:hover h4:after {
-  right: -1.5em;
-  top: 0em;
-}
-
-.content-item-date,
-.content-item-image {
-  flex: 0 0 30%;
-  font-size: 0.8rem;
-  color: #64748b;
-}
-
-.description-skill-list {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5em;
-  padding-left: 0;
-}
-
-/* .description-skill-list {
-  padding-bottom: 2em;
-} */
-
-.description-skill-list-item {
-  background: rgb(94, 234, 212, 0.1);
-  opacity: 1;
-  color: #5eead4;
-  padding: 0.3em 0.6em;
-  border-radius: 1em;
+p {
+  font-size: 0.9rem;
+  color: #8497b4;
 }
