--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -43,3 +43,9 @@
 .item-active::before {
   width: 5em;
 }
+
+@media screen and (max-width: 1200px) {
+  .navigation-menu {
+    display: none;
+  }
+}
