--- a/src/index.css
+++ b/src/index.css
@@ -20,14 +20,14 @@
   box-sizing: border-box;
 }
 
-/* a {
+a {
   font-weight: 500;
-  color: #646cff;
+  color: inherit;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
-} */
+  cursor: pointer;
+}
 
 html {
   scroll-behavior: smooth;
@@ -40,35 +40,4 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #0F172A;
-  /* background: radial-gradient(circle at left top, #2c3e68 , #0F172A) */
-  /* -ms-overflow-style: none; */
 }
-
-/* body::-webkit-scrollbar {
-  display: none;
-} */
-/* 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} 
- */
