--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,4 +1,6 @@
 .navigation-menu {
+  position: sticky;
+  top: 6em;
   list-style: none;
   padding-left: 0;
   padding-top: 5em;
@@ -22,7 +24,7 @@
   margin-right: 1em;
   margin-bottom: 0.3em;
   content: "";
-  border-top: 0.01em solid rgb(255, 255, 255);
+  border-top: 0.01em solid rgb(49, 44, 44);
   width: 2em;
   height: 0;
   transition: all 250ms;
