--- a/src/components/Daryna/Daryna.css
+++ b/src/components/Daryna/Daryna.css
@@ -101,7 +101,7 @@
 }
 
 .daryna-about {
-    background-color: #ffffff;
+    background-color: #121212;
     height: 100vh;
     /* width: 100vw; */
 }
